[feature/visual-explore-paula] Nav z-index fixed. Updating Toolbar

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -321,14 +321,18 @@ a {
 #navigation {
 	width: 45px;
 	height: 100%;
-	background-color: #434043;
-	box-shadow: 1px 0 0 rgba(0,0,0,.15);
-	border: solid 1px #2d292d;
-	border-left: none;
-	/*border-right: none;*/
-	position: fixed;
+	position: absolute;
 	top: 53px;
-	z-index: 3;
+	z-index: 200;
+	box-shadow: 1px 0 10px rgba(0,0,0,.6);
+}
+
+#first-level-nav {
+	width: 45px;
+	height: 100%;
+	background-color: #302E30;
+	border: solid 1px #202020;
+	border-left: none;
 }
 
 #navigation .sub-menu-wrapper {
@@ -377,11 +381,14 @@ a {
 .nav-head > a {
 	width: 45px;
 	height: 48px;
-	box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
-	border-top: 1px solid #1D1C1F;
 	font-size: 16px;
 	text-align: center;
 	display: block;
+}
+
+.nav-head:hover {
+	background-color: #202020;
+	box-shadow: inset 1px 0 0 #101010;
 }
 
 .nav-head:first-child > a {
@@ -448,10 +455,8 @@ a {
 	line-height: 24px;
 }
 
-.nav-head:hover,
 #nav-dashboard-region li a:hover,
 .nav-region-list-items li a:hover {
-	box-shadow: inset 0 1px 0 rgba(0,0,0,.5);
 	background-color: #343034;
 	color: #fff;
 }
@@ -1584,11 +1589,12 @@ td.table-action a.btn {
 /* App/Stack Toolbar */
 #main-toolbar {
 	z-index: 2;
-	position: relative;
+	position: absolute;
 	height: 43px;
-	width: 100%;
-	top: 0;
-	background: #fff;
+	width: auto;
+	top: 6px;
+	left: 6px;
+	background: rgba(0,0,0,.6);
 	border-bottom: 1px solid #ccc;
 	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
 }
